--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
                 <link href='http://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+        fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
     	<div class ="topDesign">
     		<div id= "corner"></div>
     		<div id= "sun"></div>
@@ -39,7 +47,7 @@
                         </div>
                                 <div class ="commentSection">
                                 	<div class ="commentTitle">Comments</div>
-                                	<div class="fb-comments" data-href="http://mplaza.github.io/foodblog/" data-width="700" data-numposts="5" data-colorscheme="light"></div>
+                                	<div class="fb-comments" data-href="http://mplaza.github.io/nycblog" data-width="750" data-numposts="5" data-colorscheme="light"></div>
                         		</div>
                         <div class = "firstPost">
                                <div id= "stumptownPic"><img src="http://www.golfholiday.com/content/italian_food2.jpg" width= "400"></div>
@@ -57,7 +65,7 @@
                         </div>
                             <div class ="commentSection">
                                 	<div class ="commentTitle">Comments</div>
-                                	<div class="fb-comments" data-href="http://mplaza.github.io/foodblog/" data-width="700" data-numposts="5" data-colorscheme="light"></div>
+                                	<div class="fb-comments" data-href="http://mplaza.github.io/nycblog" data-width="750" data-numposts="5" data-colorscheme="light"></div>
                         	</div>
        			 </div>
     </body>
