--- a/index.html
+++ b/index.html
@@ -67,5 +67,23 @@
                                 	<div class ="commentTitle">Comments</div>
                                 	<div class="fb-comments" data-href="http://mplaza.github.io/nycblog" data-width="750" data-numposts="5" data-colorscheme="light"></div>
                         	</div>
+                    <div class = "firstPost">
+                               <div id= "stumptownPic"><img src="http://www.thompsonhotels.com/ImageGen.ashx?image=/media/178212/public1.jpg&width=1440" width= "400"></div>
+                               <div class= "postTitle">Drinks</div>
+                               <div class= "dateRibbonContainer">
+                                        <div class = "beforeRibbon"></div>
+                                        <div class = "postDate">Nov 27, 2013</div>
+                                        <div class = "afterRibbon"></div>
+                                        <div class="drinkRibbon"></div>
+                                    </div>
+                               <div class = "postContent">Viverra dictumst non primis quis parturient molestie praesent a eros magna pharetra sem fames bibendum mauris dis sollicitudin porttitor dis sociis, pellentesque pharetra etiam sodales. Mollis. Vehicula. Nunc pretium lobortis. Lorem dis vehicula dignissim primis nisl pede elit. Pellentesque. Netus inceptos iaculis odio lacinia. Netus commodo tellus morbi ornare morbi nunc senectus tristique aliquam blandit convallis at litora nostra ultricies nullam. Interdum.<br></br>
+                                Suscipit, dis curae; quisque. Sed tempor rutrum venenatis venenatis sed est. Sapien nisi parturient aliquam tincidunt platea commodo fames Adipiscing. Consequat accumsan lectus montes consectetuer dis. Dictum pellentesque egestas commodo ultricies hac nisi mollis quam ultrices senectus fermentum, quam mollis lectus class rhoncus potenti vel lacinia proin, fermentum. Mollis habitant mus. Magna. Aliquet sapien tempus ridiculus inceptos eget aliquet, sodales vel at feugiat sodales duis vulputate nullam Accumsan, pulvinar proin in sapien Magnis placerat placerat pharetra vel duis praesent faucibus nunc habitasse nec. Aenean. Aliquam facilisi non taciti nisi est congue nec erat vitae litora blandit purus commodo lacinia vitae nibh cursus praesent nam pretium. Aliquam, vehicula in imperdiet pellentesque eget semper Quam magnis aliquam ante ut tortor. Etiam duis porttitor, penatibus adipiscing fermentum magnis convallis sagittis ridiculus gravida, vulputate.<br></br>
+
+                                Et pulvinar suscipit convallis arcu aenean metus lacus mus sollicitudin ligula cum massa pharetra aliquet tellus netus nascetur id litora, blandit bibendum, purus, dictumst sed. Quisque lobortis. Primis placerat hymenaeos posuere dui elit habitant eros praesent cum habitasse scelerisque vehicula. Hac eleifend libero felis at parturient vitae fames quam curae; consectetuer dapibus praesent ipsum inceptos lacus lacinia sagittis at. Justo suspendisse cras viverra. Aptent nascetur ipsum lobortis praesent elit. Dui proin quis natoque non class pede eleifend placerat aptent consectetuer nullam nam posuere ac. Sit libero quis penatibus, tempor. Aenean libero faucibus taciti fusce id Iaculis posuere sollicitudin montes imperdiet nibh magnis habitant, a. Curae; pharetra mauris purus.</div>
+                        </div>
+                            <div class ="commentSection">
+                                    <div class ="commentTitle">Comments</div>
+                                    <div class="fb-comments" data-href="http://mplaza.github.io/nycblog" data-width="750" data-numposts="5" data-colorscheme="light"></div>
+                            </div>
        			 </div>
     </body>
